XEngine_MQService V3.16.0.1001

增加:CI发布更多系统支持
增加:HTTP创建主题支持
更新:编译脚本
更新:依赖库
修改:调整用户默认注册级别
修改:只有在发布版本下才发送信息报告了
修改:注册和删除协议使用HTTP替代
修改:http获取方法移动合并到新的目录
修改:调整http验证方法,现在使用token替代了
修改:http请求api 使用post并且只有post才做验证
修改:区分了http的get和post处理
修改:http删除和创建主题名称并且都交给tcp代码处理
修改:tcp处理支持http协议了
修复:删除协议解析不生效
删除:多余代码

added:ci more release support
added:create topic support for http
update:make file build flags
update:depend library
modify:adjust user register level
modify:only release work for report info and improved get time function
modify:register and delete protocol use http instead
modify:http get method move to http task dir
modify:adjust http authorize method.now it use token instead with get
modify:http request info api to post and post verification
modify:The http protocol distinguishes the API get information
modify:delete and create topic convert to tcp handle
modify:tcp task handle http type support
fixed:delete not parse protocol
delete:redundant functions
======================================================================================
XEngine_MQService V3.15.0.1001

增加:HTTP验证授权支持
增加:删除主题和用户的HTTP接口支持
增加:帮助模块
增加:arm64的发布流和编译支持
增加:设置日志类型支持
更新:依赖库
优化:参数解析
修改:http错误码使用了公用头的错误
修改:主题存在不允许创建主题
修改:为队列使用单独的序列号统计
修改:不允许注册空的密码
修改:http封包可以设置空的消息
修正:定时发布不工作的问题
修正:设置日志级别不工作的问题

added:authorize verification support with http authorize
added:delete topic and user for http management
added:help module
added:arm64 build support and ci release
added:set log type support
update:depend library
improved:parameter parse and more parameter supported
modify:http error code use protocol common hdr file
modify:does not allow to create topic when the topic is existed
modify:Use of separate statistical notation for queue
modify:does not allow empty for register and login
modify:http packet can be set null message
fixed:time publish task not work
fixed:set log level not work
======================================================================================
XEngine_MQService V3.14.0.1001
